--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,13 +10,11 @@
 
     <ImageView
         android:id="@+id/loginLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginBottom="47dp"
-        app:layout_constraintBottom_toTopOf="@+id/loginLl"
+        android:layout_width="100dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,80 +22,72 @@
 
     <LinearLayout
         android:id="@+id/loginLl"
-        android:layout_width="338dp"
-        android:layout_height="349dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="45dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="40dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/loginLogo2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.431"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginLogo">
 
         <TextView
             android:id="@+id/LoginTV"
-            android:layout_width="208dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
             android:layout_marginTop="0dp"
             android:text="Login"
             android:textColor="@color/white"
             android:textColorHint="@color/primary"
-            android:textSize="30dp"
+            android:textSize="28dp"
+            android:textStyle="bold"
             android:visibility="visible"
             tools:visibility="visible" />
+
+        <View
+            android:id="@+id/holesBottomSeparator"
+            android:layout_width="108dp"
+            android:layout_height="3dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/button_gradient" />
 
         <EditText
             android:id="@+id/loginEmailET"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="38dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/border"
             android:backgroundTintMode="add"
             android:ems="10"
             android:hint="INPUT YOUR EMAIL HERE..."
             android:inputType="text"
-            android:textColorHint="@color/white"
-            android:textSize="10dp" />
+            android:textSize="12sp" />
 
         <EditText
             android:id="@+id/loginpwET"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="38dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/border"
             android:ems="10"
             android:hint="INPUT YOUR PASSWORD HERE..."
             android:inputType="text"
-            android:textColorHint="@color/white"
-            android:textSize="10dp" />
+            android:textSize="12sp" />
 
         <Button
             android:id="@+id/loginBTN"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_width="128dp"
+            android:layout_height="42dp"
+            android:layout_marginTop="24dp"
             android:background="@drawable/button_gradient"
-            android:backgroundTintMode="src_in"
-            android:drawableRight="@drawable/_0"
-            android:text="LOGIN"
-            app:icon="@drawable/button_gradient" />
+            android:text="LOGIN" />
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/loginLogo2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="319dp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/tagline"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginLl"
-        app:srcCompat="@drawable/tagline" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
