--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,11 +13,9 @@
         android:id="@+id/regisLogo"
         android:layout_width="100dp"
         android:layout_height="90dp"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,15 +23,11 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="368dp"
-        android:layout_height="436dp"
-        android:layout_marginStart="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="10dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/regisLogo2"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/regisLogo">
@@ -42,89 +36,87 @@
             android:id="@+id/textView"
             android:layout_width="208dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
             android:layout_marginTop="0dp"
             android:text="Register"
-            android:textSize="30dp"
             android:textColor="@color/white"
-            android:textColorHint="@color/muted" />
+            android:textColorHint="@color/muted"
+            android:textSize="28dp"
+            android:textStyle="bold" />
+
+        <View
+            android:id="@+id/holesBottomSeparator"
+            android:layout_width="108dp"
+            android:layout_height="3dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/button_gradient" />
 
         <EditText
             android:id="@+id/usernameET"
             android:layout_width="match_parent"
             android:layout_height="38dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/border"
             android:hint="INPUT USERNAME HERE..."
             android:inputType="text"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:textSize="10sp" />
+            android:textSize="12sp" />
 
         <EditText
             android:id="@+id/emailET"
             android:layout_width="match_parent"
             android:layout_height="38dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/border"
             android:hint="INPUT EMAIL HERE..."
             android:inputType="text"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:textSize="10sp" />
+            android:textSize="12sp" />
 
         <EditText
             android:id="@+id/passwordET"
             android:layout_width="match_parent"
             android:layout_height="38dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/border"
             android:hint="INPUT PASSWORD HERE..."
             android:inputType="text"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
             android:textSize="10sp" />
 
         <EditText
-            android:id="@+id/confirmpwET"
+            android:id="@+id/confirmET"
             android:layout_width="match_parent"
             android:layout_height="38dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/border"
             android:hint="RE - CONFIRM PASSWORD HERE..."
             android:inputType="text"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
             android:textSize="10sp" />
 
         <Button
             android:id="@+id/submitBTN"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Button" />
+            android:layout_width="128dp"
+            android:layout_height="42dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/button_gradient"
+            android:text="SUBMIT" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textColor="@color/white"
-            android:textSize="10sp"
-            android:text="BY SUBMITING, YOU AGREE TO THE TERMS AND CONDITIONS" />
+            android:layout_marginTop="8dp"
+            android:text="BY SUBMITING, YOU AGREE TO THE TERMS AND CONDITIONS"
+            android:textColor="@color/muted"
+            android:textSize="10sp" />
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/regisLogo2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="303dp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/tagline"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:srcCompat="@drawable/tagline" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
