--- a/app/src/main/res/layout/fragment_analytics.xml
+++ b/app/src/main/res/layout/fragment_analytics.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingVertical="16dp"
-    tools:context=".ui.analytics.AnalyticsFragment">
+    tools:context=".ui.main.AnalyticsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
