--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingVertical="16dp"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.main.HomeFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
