--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -100,7 +100,7 @@
             android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/homeProductRV"
+            android:id="@+id/postsRV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
